<resources>
    <string name="app_name">Welsh Pharmacy</string>
    <string name="get_list_buttontext">Get List</string>

    <!-- General -->
    <string name="service_ailments">Minor ailments</string>
    <string name="service_flu">Flu vaccination</string>
    <string name="service_health">NHS Health check</string>
    <string name="service_smoking">Stop smoking service</string>
    <string name="service_alcohol">Advice on alcohol consumption</string>

    <!-- Filter Preference activity -->
...
    <string name="instruction_postcode">Enter postcode</string>
    <!--Retrieved from: https://howtodoinjava.com/regex/java-regex-validate-u-k-postal-codes-postcodes/ 17/3/18-->
    <string name="postcode_regex" translatable="false">^[A-Z]{1,2}[0-9R][0-9A-Z]? [0-9][ABD-HJLNP-UW-Z]{2}$</string>
    <string name="location_divider" translatable="false">------------ OR ------------</string>
    <string name="postcode_invalid" translatable="false">Postcode is not valid</string>
    <string name="location_permission" translatable="false">Allow location tracking</string>
    <string name="button_submit_text">Submit</string>
    <string name="button_filter_text">Reset</string>
    <string name="reset_text">Configuration has been reset</string>

    <!--StaffFilterPreferenceActivity-->
    <string name="toggle_available">Available</string>
    <string name="toggle_unavailable">Unavailable</string>
...
    <string name="location_catch_statement">Location could not be determined from postcode</string>
    <string name="see_location_on_map">See location on Map</string>
    <string name="title_activity_pharmacy_map">Map</string>
    <string name="english" translatable="false">English</string>
    <string name="cymraeg" translatable="false">Cymraeg</string>
    <string name="title_activity_email_pharmacy">EmailPharmacyActivity</string>
    <string name="enter_message">Please enter your message below</string>
    <string name="perm_not_granted">Permission was not granted.</string>
    <string name="lang_remaining">Language remaining in English.</string>
    <string name="lang_changing">Newid iaith i\'r Cymraeg.</string>
    <string name="error_lang_remaining" translatable="false">Error - language remaining.</string>
    <string name="fine_loc">Fine location permission is needed to retrieve the location.</string>>

...
